# discharge-documentation-generator

./: .env_example  .gitignore  CHANGELOG.md  LICENSE  README.md  alembic.ini  deploy.sh  dvc.yaml  manifest.json  manifest_admin.json  manifest_api.json  manifest_api_on_demand.json  manifest_api_periodic.json  manifest_demo.json  manifest_development.json  manifest_discharge.json  manifest_eval.json  manifest_pp1.json  manifest_pp2.json  pyproject.toml  requirements.txt  write_manifest.sh
.dvc/: config
.github/: pull_request_template.md
.github/workflows/: file_check.yml  linting.yml  push_on_release.yml  unit_test.yml
alembic/: env.py
data/examples/: DEMO_patient_1.csv  DEMO_patient_1_eng.csv  example_patient_discharge.txt  example_patient_file_gpt_1.txt  example_patient_file_gpt_2.txt  example_patient_file_gpt_3.txt  example_payload.json
data/processed/: bulk_generated_docs_gpt.parquet.dvc  bulk_generated_docs_gpt_old.parquet.dvc  evaluation_data.parquet.dvc  metavision_data.parquet.dvc
data/prompts/: system_prompt.txt  user_prompt1.txt
data/raw/: .gitignore  Patient_file_1.txt  example_patient_discharge.txt.dvc  example_patient_file_gpt.txt.dvc  metavision_time_measurements.csv.dvc  pseudonomised_HiX_discharge_data.parquet.dvc  pseudonomised_HiX_patient_files.parquet.dvc  pseudonomised_metavision_data.parquet.dvc  pseudonomised_new_metavision_data.parquet.dvc
data/sql/: [DRAFT]hix_patient_files_deploy_composition.sql  data_extraction_metavision.sql  export_time_measurements.sql  extract_admissions.sql  hix_discharge_docs.sql  hix_discharge_docs_retro.sql  hix_patient_files.sql  hix_patient_files63.sql  hix_patient_files_deploy.sql  hix_patient_files_deploy_stg.sql  hix_patient_files_retro_stg.sql  metavision_deploy.sql  metavision_discharge_docs_retro.sql  metavision_retro.sql
data/sql/deployment/: metavision_deploy.sql  nifi_pipeline.sql
docs/: conf.py  dataset_card.md  index.rst  model_card.md
notebooks/: analysis_human_evaluation.ipynb  baseline_time_measurement.ipynb  create_fase_1_batches.ipynb  deduce_text.ipynb  exploratory_data_analysis_Metavision.ipynb  exploratory_data_analysis_new_Metavision.ipynb  find_dataplatform.ipynb  get_patients_with_small_file.ipynb  gpt_evaluation.ipynb  include_full_letters.ipynb  iterative_sumulation.ipynb  pilot_analysis.ipynb  run_one_letter.ipynb  save_discharge_docs_bulk.ipynb  test_prompt.ipynb  tryout_database.ipynb  view_feedback_eval_dashboard.ipynb
notebooks/Source_searching/: Get_embeddings_from_dataset.ipynb  embedding_testing.ipynb  search.py  test_langchain.ipynb
notebooks/data_exploration/: exploratory_data_analysis_Metavision.ipynb  get_patients_with_small_file.ipynb  psy_data_explore.ipynb
notebooks/pre_pilot_eval/: analysis_human_evaluation.ipynb  create_fase_1&2_batches_CAR_may.ipynb  create_fase_1_batches.ipynb  pre_release_data.ipynb  write_enc_ids_phase2.ipynb
notebooks/processing_raw_data/: apply_rtf.ipynb  deduce_text.ipynb
output/dvclive/: metrics.json  params.yaml
rsconnect-python/: Discharge_Documentation_Generator.json  manifest.json
run/: admin_dashboard.py  api.py  api_on_demand.py  api_periodic.py  app.py  data_pipeline.py  demo_dashboard.py  development_dashboard.py  discharge_dashboard.py  evaluation_dashboard.py  fase_2_dashboard.py  pilot_application.py  pre_release_eval_dashboard.py  visualise_patient_file.py  visualise_patient_file_HIX.py  visualise_patient_file_metavision.py
run/cache/: lookup_structs.pickle.dvc
run/config/: .gitignore  auth.toml.dvc  auth_example.toml  auth_fase1.toml.dvc  auth_fase2.toml.dvc  deployment_config.toml
src/discharge_docs/: config.py  config_models.py  prompt.py  system_prompt.txt  user_prompt.txt
src/discharge_docs/api/: api_helper.py  app.py  app_on_demand.py  app_periodic.py  deployment_config.toml  pydantic_models.py
src/discharge_docs/dashboard/: .gitignore  batching_helper.py  dashboard_layout.py  enc_ids.toml  enc_ids.toml.dvc  enc_ids_dashboard.toml  enc_ids_pre_release_phase1_1.toml  enc_ids_pre_release_phase2.toml  evaluate_dashboard_layout.py  helper.py  layout.py  pre_release_eval_dashboard_layout.py  prompt.py
src/discharge_docs/database/: connection.py  helper.py  models.py  student_annotation.py
src/discharge_docs/evaluate/: evaluate_prompt.py  evaluate_prompt_helper.py
src/discharge_docs/llm/: connection.py  deployment_config.toml  helper.py  prompt.py  prompt_builder.py
src/discharge_docs/processing/: apply_rtf.py  apply_rtf_dev.py  (+5 more)
tests/: MockAzureOpenAIEnv.py  test_api.py  test_bulk_generate.py  test_dashboard.py  test_database_connection.py  test_evaluate_docs.py  test_llm.py  test_processing.py  test_prompt.py
tests/data/: example_data.json  example_hix_data.json
(+29 files in other folders)
