[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discharge_docs"
version = "0.5.1"
authors = [
  { name="Ruben Peters", email="r.peters-7@umcutrecht.nl" },
  { name="Laura Veerhoek", email="l.p.veerhoek@umcutrecht.nl" },
]
description = "Tool that uses LLM's to automatically generate discharge documentation. Part of the 'AI for administration load' project."
readme = "README.md"
requires-python = ">= 3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies =[
    "openai~=1.8",
    "python-dotenv~=1.0",
    "deduce~=3.0.1",
    "matplotlib~=3.8",
    "plotly~=5.18",
    "dash-bootstrap-components~=1.5",
    "pandas~=2.1",
    "SQLAlchemy~=2.0",
    "tiktoken~=0.5",
    "tomli~=2.0",
    "pyarrow~=14.0",
    "dash~=2.16",
    "dvclive~=3.44",
    "rouge-score~=0.1",
    "fastapi>=0.111.0",
    "pymssql>=2.3.0",
    "striprtf>=0.0.26",
    "openpyxl>=3.1.3",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-asyncio"]
dev = ["rsconnect-python", "nbstripout", "dvc~=3.39", "dvclive~=3.5", "ipykernel"]

[tool]
rye = { dev-dependencies = [
    "ipykernel>=6.29.5",
    "nbstripout>=0.7.1",
    "pytest>=8.0.2",
    "uvicorn>=0.30.1",
    "pytest-asyncio~=0.23.6",
    "rsconnect-python>=1.24.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.2.3",
    "tomli-w~=1.0.0",
] }

[tool.isort]
profile = "black"

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "W",
    "C90",
    "I",
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "Depends",
    "fastapi.Depends",
    "fastapi.params.Depends",
    "Security",
]
